[package]
name = "monkeyfetch"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
chrono-humanize = "0.2.3"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
reqwest = { version = "0.13.2", features = ["blocking", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "1.1.0"
